# ubem-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_TO_GITHUB.ps1  DEPLOY_TO_GITHUB.sh  GitHub部署步骤.txt  LICENSE  README.md  README_FOR_DEVELOPERS.txt  pyproject.toml  requirements.txt  setup.py  快速部署指南.txt
.github/workflows/: ci.yml
examples/: basic_usage.py  idf_modification_example.py  mcp_client_config.json  thermal_comfort_example.py
ubem_analysis_mcp/: __init__.py  config.py  server.py
ubem_analysis_mcp/tools/: __init__.py  data_analysis.py  idf_modification.py  simulation_tools.py  thermal_comfort_analysis.py  weather_analysis.py
