[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubem-analysis-mcp"
version = "1.2.1"
description = "Urban Building Energy Model (UBEM) Analysis MCP Server for EnergyPlus Simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.1.0",
    "fastmcp>=0.1.0",
    "eppy>=0.5.63",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
license = {text = "MIT"}
keywords = ["EnergyPlus", "UBEM", "MCP", "Building Energy", "Simulation", "Model Context Protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/JINGFENGZ/ubem-mcp"
Documentation = "https://github.com/JINGFENGZ/ubem-mcp/blob/main/README.md"
"Bug Tracker" = "https://github.com/JINGFENGZ/ubem-mcp/issues"

[project.scripts]
ubem-mcp = "ubem_analysis_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ubem_analysis_mcp*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

